--- a/src/styles.css
+++ b/src/styles.css
@@ -104,6 +104,7 @@ button {
 }
 #fileInput {
   max-width: 50vw;
+  margin-left: 5px;
   white-space: initial;
 }
 #message-input {
@@ -124,7 +125,32 @@ button {
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
-img {
+
+#file-drop-indicator {
+  position: fixed;
+  z-index: 2;
+
+  align-self: center;
+
+  display: none;
+
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+
+  transition-duration: 1s;
+
+  background-color: #2f2f2f;
+
+  border-color: rgb(17, 160, 255);
+  border-style: solid;
+  border-radius: 10px;
+}
+#file-drop-indicator > center > img {
+  width: 100px;
+  margin-top: 10px;
+}
+.chat-img {
   max-height: 350px;
   max-width: 90%;
   margin-left: 7.5px;
